# Tic-Tac-Toe

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.py  compile.sh  docker-compose.yml  main  main.cpp  results.txt  script.sh
GameStats/: GameStats.txt  GameStatsDB.csv
includes/: AIEngine.h  AIMoves.h  CMakeLists.txt  Game.h  GameConfig.h  GameStats.h  NetworkGame.h  NetworkGameClient.h  Player.h  Server.h  Slot.h  TicTacToeCore.h  TicTacToeWindow.h
src/: AIEngine.cpp  AIMoves.cpp  CMakeLists.txt  Game.cpp  GameConfig.cpp  GameStats.cpp  NetworkGameClient.cpp  Player.cpp  Slot.cpp  TestServer.cpp  TicTacToe.cpp  TicTacToeCore.cpp  TicTacToeWindow.cpp
src/Server/: NetworkGame.cpp  Server.cpp  TicTacToeServer.cpp
styles/: tictactoe.css
tests/: NetworkGameTests.cpp  TicTacToeCoreTests.cpp
web/: create.html  game.html  game.js  join.html
web/styles/: game.css  game.js
